--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "node-sass": "^3.4.2",
     "nyan-progress-webpack-plugin": "^1.1.4",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.6",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
@@ -80,7 +81,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0"
   }
 }
